feat: sync send onBackPressed event on android